<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:id="@+id/signUpContainer"
             tools:context=".fragments.SignUpFragment">

    <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
                                                       android:layout_height="match_parent">


        <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Sign_up"
                android:textSize="32sp"
                android:textColor="@color/white"
                app:layout_constraintBottom_toTopOf="@+id/inputs"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp" app:layout_constraintVertical_bias="0.475"
                android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginRight="8dp"/>


        <LinearLayout
                android:id="@+id/inputs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="40dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">



            <EditText
                    android:inputType="textPersonName"
                    android:hint="@string/First_name"
                    android:ems="10"
                    android:id="@+id/editTextFirstName"
                    style="@style/EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:drawableStart="@drawable/ic_person_primary_24dp"
                    android:drawableLeft="@drawable/ic_person_primary_24dp"
                    android:imeOptions="actionNext"
                    android:maxLength="16"
            />
            <EditText
                    android:inputType="textPersonName"
                    android:hint="@string/Last_name"
                    android:ems="10"
                    android:id="@+id/editTextLastName"
                    style="@style/EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:drawableStart="@drawable/ic_person_primary_24dp"
                    android:drawableLeft="@drawable/ic_person_primary_24dp"
                    android:imeOptions="actionNext"
                    android:maxLength="16"
            />
            <EditText
                    android:inputType="phone"
                    android:hint="@string/Phone"
                    android:ems="10"
                    android:id="@+id/editTextPhone"
                    style="@style/EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:drawableStart="@drawable/ic_phone_black_24dp"
                    android:drawableLeft="@drawable/ic_phone_black_24dp"
                    android:imeOptions="actionNext"
                    android:maxLength="16"
            />
            <EditText
                    android:inputType="number"
                    android:hint="@string/NSS"
                    android:ems="10"
                    android:id="@+id/editTextNss"
                    style="@style/EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:drawableStart="@drawable/ic_edit_black_24dp"
                    android:drawableLeft="@drawable/ic_edit_black_24dp"
                    android:imeOptions="actionNext"
                    android:maxLength="16"
            />

            <Button
                    style="@style/Button.Background"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/Sign_up"
                    android:id="@+id/signup"
            />
            <Button
                    android:id="@+id/login"
                    style="@style/Button.Flat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/Login"/>

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>