<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".fragments.ChangePasswordFragment">

    <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
                                                       android:layout_height="match_parent">


        <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Credentials"
                android:textSize="32sp"
                android:textColor="@color/white"
                app:layout_constraintBottom_toTopOf="@+id/inputs"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp" app:layout_constraintVertical_bias="0.475"
                android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginRight="8dp"/>


        <LinearLayout
                android:id="@+id/inputs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="40dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

            <EditText
                    style="@style/EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:drawableStart="@drawable/ic_password_primary_24dp"
                    android:drawableLeft="@drawable/ic_password_primary_24dp"
                    android:hint="@string/Password"
                    android:inputType="textPassword"
                    android:imeOptions="actionDone"
                    android:maxLength="16"
                    android:id="@+id/newPassword"
            />
            <EditText
                    style="@style/EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:drawableStart="@drawable/ic_password_primary_24dp"
                    android:drawableLeft="@drawable/ic_password_primary_24dp"
                    android:hint="@string/Confirm_password"
                    android:inputType="textPassword"
                    android:imeOptions="actionDone"
                    android:maxLength="16"
                    android:id="@+id/newPasswordConfirmation"
            />
            <Button
                    style="@style/Button.Background"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/Save"
                    android:id="@+id/changePasswordButton"
            />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>