<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
>

    <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
                                                       android:layout_height="668dp">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:layout_margin="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent">
            <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/CreateNewOrder"
                    android:textSize="32sp"
                    android:textColor="@color/white"
            />

        </LinearLayout>
        <LinearLayout
                android:id="@+id/pharmacyDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent">
            <TextView
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:gravity="center_vertical"
                    android:textColor="@color/white"
                    android:text="Pharmacy Name"
                    android:textSize="20dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>
            <TextView
                    android:id="@+id/address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:text="Address"
                    android:drawablePadding="5dp"
                    android:drawableLeft="@drawable/ic_location_on_black_24dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>
            <TextView
                    android:id="@+id/phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:gravity="center_vertical"
                    android:textColor="@color/white"
                    android:drawablePadding="5dp"
                    android:drawableLeft="@drawable/ic_phone_black_24dp"
                    android:text="+213657058126"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>
            <TextView
                    android:id="@+id/facebook"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:gravity="center_vertical"
                    android:textColor="@color/white"
                    android:drawablePadding="5dp"
                    android:drawableLeft="@drawable/ic_link_black_24dp"
                    android:text="www.facebook.com/pageId"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>
            <LinearLayout
                    android:orientation="horizontal"
                    android:gravity="center_horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toTopOf="parent"
            >
                <TextView
                        android:id="@+id/checkIn"
                        android:layout_width="150dp"
                        android:layout_height="50dp"
                        android:layout_marginTop="8dp"
                        android:gravity="center"
                        android:drawableLeft="@drawable/ic_timer_black_24dp"
                        android:textColor="@color/colorSuccess"
                        android:text="Check IN"
                />

                <TextView
                        android:id="@+id/checkOut"
                        android:layout_width="150dp"
                        android:layout_height="50dp"
                        android:layout_marginTop="8dp"
                        android:gravity="center"
                        android:drawableLeft="@drawable/ic_timer_off_black_24dp"
                        android:textColor="@color/colorWarning"
                        android:text="Check OUT"
                />

            </LinearLayout>

        </LinearLayout>
        <LinearLayout
                android:id="@+id/inputs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="40dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

            <Button
                    android:id="@+id/chooseImage"
                    style="@style/Button.Inverse"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/Prescription"/>

            <Button
                    android:id="@+id/sendOrder"
                    style="@style/Button.Background"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/Order"/>

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>